# dnd

./: .gitignore  data.py  pyproject.toml  pytest.ini  race-template.html  resources.txt
code/: AStarSearch.py  Direction.py  HexResources.py  RecipeDefinitions.py  RecipeRunner.py  ResourcePriceCalculator.py  ShortestPaths3.py  TownInfo.py  Triangles.py  WorldGenerator.py  background_generator.py  characters.py  class_tables.py  details.py  dice.py  dnd_globals.py  drunk.py  mage_spells.py  pyproject.toml  weapons.py
code/newecon/: definitions.py  design.txt  references.py  test_econ.py  towns.py  units.txt
dnd/: __init__.py  a_star_search.py  actions.py  background_generator.py  characters.py  class_tables.py  copymaps.sh  degradation.py  design.txt  details.py  dice.py  dnd_globals.py  dotests.sh  drunk.py  entity.py  jsonize.py  mage_spells.py  mjtime.py  models.py  references.py  server.sh  site-localhost.db  tasks.txt  towns.py  tradegoods.py  tunnel.sh  units.txt  utility.py  weapons.py  wilderness.py
dnd/__web__/: __init__.py
pages/: assassin.md  attacking.md  character-creation.md  charisma.md  constitution.md  dwarf.md  experience.md  fighter.md  gnome.md  halfling.md  intelligence.md  leveling-up.md  mage.md  monk.md  natural-weaon.md  ranger.md  resurrection-limit.md  spell-schools.md  wisdom.md  wounds.md
rules/: abilityscores.md  cleric.md  dexterity.md  druid.md  elf.md  fighter.md  halfling.md  halforc.md  horses.md  human.md  illusionist.md  literacy.md  planar-gating.md  prospecting.md  racial-stereotypes.md  saving-throws.md  sizes.txt
(+117 files in other folders)
