[tool.poetry]
name = "dnd"
version = "0.1.0"
description = ""
authors = ["Maxwell Joslyn <maxwelljoslyn@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9,<3.11"
click = "^8.0.3"
noise = "^1.2.2"
Pint = "^0.18"
understory = "^0.0.353"
emoji = "^1.7.0"
pytest = "^7.1.2"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = "120"
