[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Maxwell Joslyn <maxwelljoslyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
black = "^21.12b0"
noise = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
